@@ -11,7 +11,7 @@ modLoader="javafml" #mandatory
 loaderVersion="[31,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 
 # A URL to refer people to when problems occur with this mod
-#issueTrackerURL="http://my.issue.tracker/" #optional
+issueTrackerURL="https://github.com/ADDSynth/Overpowered-Forge-1.15/issues" #optional
 
 
 
@@ -35,7 +35,7 @@ displayName="ADDSynthCore" #mandatory
 #updateJSONURL="http://www.gyrostudiostechnology.com/minecraft/mods/overpowered/update.json" #optional
 
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="http://www.gyrostudiostechnology.com/minecraft/mods/minecraft_mods.html" #optional
+displayURL="http://www.gyrostudiostechnology.com/minecraft/mods/addsynthcore/index.html" #optional
 
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="addsynth_core_logo.png" #optional
@@ -73,7 +73,7 @@ description="Core mod required by all of ADDSynth's mods. Also adds a few basic 
 modId="addsynth_materials"
 version="1.0"
 displayName="ADDSynth Materials"
-displayURL="http://www.gyrostudiostechnology.com/minecraft/mods/minecraft_mods.html"
+displayURL="http://www.gyrostudiostechnology.com/minecraft/mods/materials/index.html"
 logoFile="addsynth_materials_logo.png"
 credits=""
 authors="ADDSynth"
@@ -89,7 +89,7 @@ description="Extra Materials"
 modId="addsynth_energy"
 version="1.0"
 displayName="ADDSynth Energy"
-displayURL="http://www.gyrostudiostechnology.com/minecraft/mods/minecraft_mods.html"
+displayURL="http://www.gyrostudiostechnology.com/minecraft/mods/addsynth_energy/index.html"
 logoFile="addsynth_energy_logo.png"
 credits="Mojang, and the Forge Development Team"
 authors="ADDSynth"
